<resources>
    <string name="app_name">ETSIIT Campus</string>
    <string name="welcome_text"><b>¡Bienvenido!</b></string>
    <string name="saldo_text">Saldo:\u0020</string>
    <string name="saldo_value_text">0.0</string>
    <string name="euro_symbol_text">\u0020€</string>
    <string name="welcome_description">¡Bienvenido a la nueva app de la escuela! Descubre sus funciones más abajo, pronto se irán añadiendo más.</string>
    <string name="guidance_title">Guiado punto a punto</string>
    <string name="guidance_description">Conoce la ruta entre dos puntos de la ETSIIT. ¡Ahora con realidad virtual!</string>
    <string name="canteen_menu_title">Comida para llevar</string>
    <string name="canteen_menu_description">Configura tu menú para llevar, eligiendo los platos que desees entre las opciones disponibles.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>

    <string name="title_eliga_ruta">Eliga la ruta:</string>
    <string name="title_inicio_ruta">Inicio:</string>
    <string name="label_button_qr">QR</string>
    <string name="campo_obligatorio">* Campo obligatorio</string>
    <string name="title_fin_ruta">Fin:</string>
    <string name="label_button_iniciar_ruta">Iniciar ruta</string>
    <string name="prompt_inicio">Seleccione un inicio</string>
    <string name="prompt_fin">Seleccione un final</string>
    <string-array name="rutas_inicio">
        <item></item>
        <item>Entrada ETSIIT</item>
        <item>Despacho Marcelino</item>
        <item>Aula 1.5</item>
    </string-array>
    <string-array name="rutas_fin">
        <item></item>
        <item>Entrada ETSIIT</item>
        <item>Despacho Marcelino</item>
        <item>Aula 1.5</item>
    </string-array>
</resources>